added README and fixed file paths

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,9 @@
-CarlaRoot
+WindowsNoEditor
 .vscode
-carla
 generated_data
 venv
 .idea
 logs
-
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
